--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,14 +2,14 @@
     <div class="ae-grid ae-grid--collapse">
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-left">
             <ul class="rk-menu rk-footer-menu">
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">About</a>
+                <li routerLinkActive="active" class="rk-menu__item">
+                    <a routerLink="home" class="rk-menu__link">Home</a>
                 </li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Docs</a>
-                </li>
-                <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact</a>
+                <li routerLinkActive="active" class="rk-menu__item">
+                    <a routerLink="about" class="rk-menu__link">Acerca de</a>
                 </li>
             </ul>
-            <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ anio }} URKU PORTFOLIO </span>All Right Reserved.</p>
+            <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ anio }} Catálogo Respuestos Net </span>Todos lod Derechos Reservados.</p>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center">
             <a href="#0" class="rk-social-btn ">
@@ -30,8 +30,8 @@
           </svg></a>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
-            <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">contact@urkuportfolio.com </a></span></p>
-            <p class="rk-footer__text rk-footer__by">Theme by <a href="http://pixeden.com" class="ae-u-bolder">Pixeden.</a></p>
+            <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">contacto@catalogorepuestosnet.com </a></span></p>
+            <p class="rk-footer__text rk-footer__by">Desarrollado por <a href="http://dexterbits.com" class="ae-u-bolder" target="_blank">Dexterbits Soluciones Informáticas</a></p>
         </div>
     </div>
 </footer>
