--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
+/* svg Animation*/
+
+svg path,
+svg rect {
+    fill: black;
+}
+
+
+/* Animated*/
+
 .main-container {
     margin-top: 40px;
     margin-bottom: 150px;
