--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="ae-masonry-md-2 ae-masonry-xl-4">
-        <a *ngFor="let producto of productosServices.productos" routerLink="/item" class="animated fadeIn rk-item ae-masonry__item"><img src="assets/productos/{{ producto.url }}.jpg" alt="" />
+        <a *ngFor="let producto of productosServices.productos" [routerLink]="['/item',producto.cod]" class="animated fadeIn rk-item ae-masonry__item"><img src="assets/productos/{{ producto.url }}.jpg" alt="" />
             <div class="item-meta">
                 <h2>{{ producto.titulo }}</h2>
                 <p>{{ producto.categoria }}</p>
